listing layout update

--- a/sass/page/_listing.scss
+++ b/sass/page/_listing.scss
@@ -470,7 +470,7 @@ margin-right: 2.9%;
     /* box-shadow: inset 2px 2px 2px 2px #ccc; */
     padding: 5px;
     outline: none;
-    /* appearance: none; */
+    // appearance: none;
 }
 
 .productType{
