--- a/sass/layout/_supportChatroom.scss
+++ b/sass/layout/_supportChatroom.scss
@@ -22,7 +22,7 @@ $uiColor:(
     backdrop-filter: blur(0.5em);
     // border: 1px solid #000;
     border-radius: 50%;
-    border: 2px solid #000;
+    // border: 1px solid #000;
 
     &[class*="active"]{
         // 開啟客服時
