--- a/sass/page/_homePage.scss
+++ b/sass/page/_homePage.scss
@@ -2,7 +2,7 @@
 // .cursor{
 //     width: 80px;
 //     height: 80px;
-//     background-color: #FFD60A;
+//     background-color: #888;
 //     border-radius: 200px;
 //     // filter:invert(1);
 //     position: fixed;
