--- a/sass/page/_about.scss
+++ b/sass/page/_about.scss
@@ -2,6 +2,7 @@
     .backToTop{
         text-align: center;
         padding: 0 0 3em 0;
+        cursor: pointer;
     }
     .pic{
         width: 100%;
