listing radio update appearance none delete

--- a/sass/page/_listing.scss
+++ b/sass/page/_listing.scss
@@ -485,6 +485,13 @@ margin-right: 2.9%;
     font-weight: lighter;
 }
 
+#ad1{
+    cursor: pointer;
+
+}
+#ad2{
+    cursor: pointer;
+}
 .ad{
     position: relative;
 }
@@ -751,7 +758,7 @@ width: 80px;
 height: 20px;
 border-radius: 5px;
 padding-left: 5px;
-padding-top: 2px;
+padding-top: 0px;
 margin-right: 20px;
 box-sizing: border-box;
 }
