--- a/html/layout/backheader.html
+++ b/html/layout/backheader.html
@@ -1,35 +1,47 @@
-<section class="mainBanner">
-    <div class="titleBox">
-        <div class="logo">
-            <a href="index.html">
-                <img src="assets/image/all_logo.png" alt="">
-            </a>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>@@title</title>
+    <link rel="stylesheet" href="assets/css/backStyle.css">
+    <script src="js/vue/vue.js"></script>
+</head>
+<body>
+        
+    <section class="mainBanner">
+        <div class="titleBox">
+            <div class="logo">
+                <a href="index.html">
+                    <img src="assets/image/all_logo.png" alt="">
+                </a>
+            </div>
+            <div class="title">
+                <h1>後台管理</h1>
+            </div>
         </div>
-        <div class="title">
-            <h1>後台管理</h1>
+        <div class="adminBox">
+            <div class="memPhoto">
+                <img src="assets/image/back_headphoto_temp.jpg" alt="">
+            </div>
+            <div class="name">
+                <p>火爆猴</p>
+            </div>
         </div>
-    </div>
-    <div class="adminBox">
-        <div class="memPhoto">
-            <img src="assets/image/back_headphoto_temp.jpg" alt="">
-        </div>
-        <div class="name">
-            <p>火爆猴</p>
-        </div>
-    </div>
-</section>
-<section class="mainContainer">
-    <nav class="mainNav">
-        <ul>
-            <li><a href="backProduct.html">商品管理</a></li>
-            <li><a href="backOrder.html">訂單管理</a></li>
-            <li><a href="backAcution.html">拍賣管理</a></li>
-            <li><a href="backCustom.html">會員管理</a></li>
-            <li><a href="backRobSup.html">機器人客服管理</a></li>
-            <li><a href="backSup.html">真人客服管理</a></li>
-            <li><a href="backArticle.html">文章管理</a></li>
-            <li><a href="backObj.html">虛擬物件管理</a></li>
-            <li><a href="backAdmin.html">管理員管理</a></li>
-            <li><a href="backAnalyse.html">數據分析</a></li>
-        </ul>
-    </nav>
+    </section>
+    <section class="mainContainer">
+        <nav class="mainNav">
+            <ul>
+                <li><a href="backProduct.html">商品管理</a></li>
+                <li><a href="backOrder.html">訂單管理</a></li>
+                <li><a href="backAcution.html">拍賣管理</a></li>
+                <li><a href="backCustom.html">會員管理</a></li>
+                <li><a href="backRobSup.html">機器人客服管理</a></li>
+                <li><a href="backSup.html">真人客服管理</a></li>
+                <li><a href="backArticle.html">文章管理</a></li>
+                <li><a href="backObj.html">虛擬物件管理</a></li>
+                <li><a href="backAdmin.html">管理員管理</a></li>
+                <li><a href="backAnalyse.html">數據分析</a></li>
+            </ul>
+        </nav>
