--- a/sass/style.scss
+++ b/sass/style.scss
@@ -23,15 +23,15 @@
 @import 'page/articlePage';
 @import 'page/articlePost';
 //會員中心
-@import 'page/_3dSurroundView';
-@import 'page/_accountManagement';
-@import 'page/_buttonStyle';
-@import 'page/_collect';
-@import 'page/_component';
-@import 'page/_consumptionRecord';
-@import 'page/_customCharacter';
-@import 'page/_myListing';
-@import 'page/_notice';
+@import 'page/3dSurroundView';
+@import 'page/accountManagement';
+@import 'page/buttonStyle';
+@import 'page/collect';
+@import 'page/component';
+@import 'page/consumptionRecord';
+@import 'page/customCharacter';
+@import 'page/myListing';
+@import 'page/notice';
 //商品刊登
 @import 'page/listing';
 //藝廊
