--- a/html/layout/backheader.html
+++ b/html/layout/backheader.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@@title</title>
+    <link rel="icon" href="assets/icon/a_icon.ico" type="art together icon">
     <link rel="stylesheet" href="assets/css/backStyle.css">
     <script src="js/vue/vue.js"></script>
 </head>
