--- a/sass/page/_backHome.scss
+++ b/sass/page/_backHome.scss
@@ -8,73 +8,85 @@ a{
     text-decoration: none;
     color: rgb(255, 255, 255);
 }
-/* 主要banner */
+/* 主要banner 上方bar  */
 .mainBanner{
     width: 100%;
     font-size: 30px;
     display: flex;
-    align-items: center;
     justify-content: space-between;
-    height: 7vh;
+    height: 60px;
     background-color: #FBF7F3;
+    .titleBox{
+        /* 標題 logo + 文字*/
+        width: 20%;
+        height: 100%;
+        display: flex;
+        .logo{
+            width: 30%;
+            display: block;
+            min-width: 80px;
+            margin: auto;
+            box-sizing: border-box;
+            height: 100%;
+            display: flex;
+            align-items: center;
+            padding:  15px 10px;
+            // a{
+            //     display: block;
+            //     margin: auto;
+            // }
+            img{
+                max-width: 100%;
+                object-fit: cover;
+                display: block;
+            }
+        }
+        .title{
+            display: block;
+            margin: auto;
+            white-space:nowrap;
+        }
+    }
 }
-/* 標題 */
-.mainBanner .titleBox{
-    width: 20%;
-    height: 100%;
-    display: flex;
-}
-.mainBanner .logo{
-    width: 30%;
-    display: flex;
-    align-items: center;
-    overflow: hidden;
-    position: relative;
-}
-.mainBanner .logo img{
-    max-width: 100%;
-    max-height: 60%;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-}
-.mainBanner .titleBox .title{
-    width: 70%;
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
-}
-/* 登入成員 */
+
 .mainBanner .adminBox{
+    /* 登入成員 頭像 + 名字 */
     width: 20%;
+    white-space:nowrap;
     height: 100%;
     display: flex;
     justify-content: end;
+    .memPhoto{
+        // 頭像
+        // width: 20%;
+        margin-right: 0.5em;
+        display: flex;
+        align-items: center;
+        overflow: hidden;
+        // position: relative;
+        img{
+            max-width: 100%;
+            max-height: 90%;
+            border-radius: 50%;
+            object-fit: cover;
+            vertical-align: top;
+            // position: absolute;
+            // top: 50%;
+            // left: 50%;
+            // transform: translate(-50%, -50%);
+        }
+    }
+    .name{
+        // 名字
+        width: 30%;
+        display: flex;
+        justify-content: flex-start;
+        align-items: center;
+        font-size: 0.6em;
+    }
 }
-.mainBanner .adminBox .memPhoto{
-    width: 20%;
-    display: flex;
-    align-items: center;
-    overflow: hidden;
-    position: relative;
-}
-.mainBanner .adminBox .memPhoto img{
-    max-width: 100%;
-    max-height: 90%;
-    border-radius: 50%;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-}
-.mainBanner .adminBox .name{
-    width: 30%;
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
-    font-size: 0.6em;
-}
+
+
 /* 主要內容盒子 */
 .mainContainer{
     width: 100%;
