--- a/html/layout/backheader.html
+++ b/html/layout/backheader.html
@@ -19,7 +19,7 @@
                 </a>
             </div>
             <div class="title">
-                <h1>後台管理</h1>
+                <h1>後台管理 - @@title</h1>
             </div>
         </div>
         <div class="adminBox">
